--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,6 +8,6 @@ workflows:
       - name: Clean project
         script: ./gradlew clean
       - name: Build APK
-        script: ./gradlew assembleRelease
+        script:gradle assembleRelease
     artifacts:
       - app/build/outputs/apk/release/app-release.apk
