--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,11 +3,10 @@ workflows:
     name: Build Android APK
     max_build_duration: 30
     environment:
-      java: 11
+      vars:
+        JAVA_VERSION: 11
     scripts:
-      - name: Clean project
-        script: ./gradlew clean
       - name: Build APK
-        script:gradle assembleRelease
+        script: gradle assembleRelease
     artifacts:
       - app/build/outputs/apk/release/app-release.apk
