--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,16 @@
-rootProject.name = "RemoteControl"
-include ':app' 
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+rootProject.name = "My Remote" // می‌توانید نام پروژه را به دلخواه تغییر دهید
+include ':app'
